hydran-315: Implement search
And some refactoring of the db layer with specifications.
